Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjBooleanRetinteger.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        Boolean two
        two:SetValue(true)
        Yoda<Boolean, Boolean, integer> yoda
        integer ret = yoda:useForce(one, two)
        output "passed"
     end
end
