Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriBooleanRetBoolObjFail.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        boolean two = true
        Yoda<Boolean, boolean, Boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
